@@ -1,5 +1,5 @@
 DIST canto-0.4.4.1.tar.gz 28543 RMD160 4a4b5b0851bf3e4db6907b21017d4068289171ce SHA1 b869f28b85136bb3bc5c15dcd391c1827cd49c08 SHA256 626afe130f74b5e7289b18b26c2242bba8ff3dccec697f3f03b23a609fc3d124
 EBUILD canto-0.4.4.1.ebuild 572 RMD160 8fbd6544eea7a037bbc22fc4ef44ecb4606942dd SHA1 2f4a16c0e97cedc098705f63ca8a96737085985b SHA256 43e4354f1e5a909749bc6e71d18d89d7a05acf2b5f4343f5a4b437840811d303
-EBUILD canto-9999-r1.ebuild 602 RMD160 d68e7dfddd1a53297fb2f17024af887f7368f955 SHA1 1de5fb9b86c9e4f2bcb322c46332f73ef1483d6a SHA256 19b2c08bbfc4bd2525b73a47589867b72c1e7fb46243b73e7f1fdd7ca1b39e1b
-MISC ChangeLog 1606 RMD160 4b53d89a97f83c0cb6c67e954bc7e3aceaa7d1d6 SHA1 84d102192f5bc834c11cb777ad038aa4df96b4d7 SHA256 21477415f764616727f3c0953e00ca14723ead792e39d050dbcad0c92b293447
+EBUILD canto-9999-r2.ebuild 381 RMD160 4693bec570af38994cd528092947419a836dad37 SHA1 c5bcd3038229bbf85ea618d74e2fc5479d658eb9 SHA256 f30c13050ba039425f3c5fd3447c460f63f73a155b8c7baabfaeb3916aae306c
+MISC ChangeLog 1748 RMD160 c823b61f9e500ef58cedb60435e87b7f99461c9b SHA1 b7cc286937dd57b78e3e99909d72c75fc9b9691b SHA256 21cad74e3239962c4a0a1a62b940bb9c36e1a04c11758e93d8768b72b7fc84dd
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
